# BrickPick

./: .gitignore  CMakeLists.txt  README.md  main.py  package.xml  未命名.txt
brickpick/: approach_node.py  arm_preset_node.py  divide_map.py  find_node.py  image_capture_node.py  map_divide_node.py  teleop_keyboard_node.py  vision_node.py
config/: approach_params.yaml  arm_presets.yaml  brickpick_tree.xml  groot2_manifest.xml  mapper_params_online_async.yaml  vision_params.yaml
include/brickpick/: approach_action.hpp  arm_action.hpp  find_action.hpp
launch/: main.launch.py
src/: approach_action.cpp  arm_action.cpp  bt_executor.cpp  bt_nodes_plugin.cpp  camera_node.cpp  config.py  find_action.cpp
src/robot_control/: arm.py  chassis.py  gripper.py  robot.py
src/state_machine/: state_machine.py  states.py
src/vision/: detector.py  marker.py
